Actualizando nuestro repositorio

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="uno.html">Módulo 1</a>
+          <a class="mdl-navigation__link" href="index.html">Módulo 1</a>
           <a class="mdl-navigation__link" href="dos.html">Módulo 2</a>
           <a class="mdl-navigation__link" href="tres.html">Módulo 3</a>
           <a class="mdl-navigation__link" href="cuatro.html">Módulo 4</a>
@@ -126,7 +126,7 @@
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Canvas</span>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="uno.html">Módulo 1</a>
+        <a class="mdl-navigation__link" href="index.html">Módulo 1</a>
         <a class="mdl-navigation__link" href="dos.html">Módulo 2</a>
         <a class="mdl-navigation__link" href="tres.html">Módulo 3</a>
         <a class="mdl-navigation__link" href="cuatro.html">Módulo 4</a>
